--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@
 # SPDX-FileCopyrightText: 2025 The Linux Foundation
 
 ci:
+  skip: [gha-workflow-linter]
   autofix_commit_msg: |
     Chore: pre-commit autofixes
 
@@ -98,10 +99,11 @@ repos:
     hooks:
       - id: codespell
 
-  - repo: https://github.com/eclipse-csi/octopin
-    rev: 88826108188acef07eefab3bd6f04d9acd4b2cc2  # frozen: v0.1.3
+  - repo: https://github.com/modeseven-lfit/gha-workflow-linter
+    rev: 06d02d375888108bda276bc573f52e57a0e369df  # frozen: v0.1.7
     hooks:
-      - id: pin-versions
+      - id: gha-workflow-linter
+        args: [lint, ., --verbose]
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 83b816d020105076daac266dbf6bfed199a2da93  # frozen: 0.34.1
